--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,4 +22,38 @@ body{
     font-size: 100px;
     margin: auto;
     text-align: center;
+    margin-bottom: 100px;
 }
+
+#game-box{
+    margin: auto;
+    text-align: center;
+}
+
+/* 
+    beginning of button style
+    =========================
+*/
+.button{
+    border: none;
+    width: 40%;
+    height: 10%;
+    margin: auto;
+    background: blue;
+    font-size: 200%;
+    color: white;
+}
+
+.button:hover{
+    background: white;
+    color: black;
+}
+
+.button:active{
+    transform: translateY(4px);
+    filter: saturate(150%);
+}
+/* 
+    ==========================
+    end of button style
+*/
