--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,10 +23,11 @@ body{
     color: black;
     letter-spacing: 6px;
     text-shadow: 2px 2px 5px white;
-    font-size: 100px;
+    font-size: 90px;
     margin: auto;
     text-align: center;
-    margin-bottom: 60px;
+    margin-top: 0px;
+    margin-bottom: 30px;
 }
 
 #game-box{
@@ -37,23 +38,25 @@ body{
 }
 
 .game-box-text{
-    font-size: 200%;
-    font-family: 'Stalinist One', cursive;
+    font-size: 225%;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: bold;
     letter-spacing: 3px;
     text-shadow: 2px 2px 5px white;
 }
 
 .game-answer-text{
-    font-size: 150%;
-    font-family: 'Stalinist One', cursive;
+    font-size: 175%;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: bold;
     letter-spacing: 3px;
     text-shadow: 2px 2px 5px white;
 }
 
 .answer-image{
-    min-width: 500px;
+    min-width: 400px;
     max-width: 600px;
-    max-height: 500px;
+    max-height: 400px;
 }
 
 /* 
@@ -62,7 +65,8 @@ body{
 */
 .button{
     background-color: Transparent;
-    font-family: 'Stalinist One', cursive;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: bold;
     letter-spacing: 6px;
     border: none;
     width: 50%;
