--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,60 +90,26 @@ body{
     ==========================
     end of button style
 */
-
-@media screen and (max-width: 980px) {
+@media screen and (max-height: 980px) {
+    #title-text{
+        font-size: 50px;
+    }
     .button{
         height: 12%;
         margin-top: 3px;
-        width: 65%;
-        font-size: 250%;
+        width: 60%;
+        font-size: 150%;
     }
     .game-box-text{
-        font-size: 125%;
+        font-size: 120%;
         letter-spacing: 3px;
     }
     .game-answer-text{
-        font-size: 75%;
+        font-size: 95%;
         letter-spacing: 3px;
     }
     #game-box{
-        height: 60%;
-    }
-    .answer-image{
-        min-width: 300px;
-        max-width: 500px;
-        max-height: 400px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    #title-text{
-        font-family: 'Stalinist One', cursive;
-        color: black;
-        letter-spacing: 6px;
-        text-shadow: 2px 2px 5px white;
-        font-size: 80px;
-        margin: auto;
-        text-align: center;
-        margin-top: 0px;
-        margin-bottom: 30px;
-    }
-    .button{
-        height: 10%;
-        width: 65%;
-        font-size: 200%;
-        margin-top: 3px;
-    }
-    .game-box-text{
-        font-size: 170%;
-        letter-spacing: 3px;
-    }
-    .game-answer-text{
-        font-size: 130%;
-        letter-spacing: 3px;
-    }
-    #game-box{
-        height: 65%;
+        height: 80%;
     }
     .answer-image{
         min-width: 200px;
@@ -152,20 +118,46 @@ body{
     }
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 980px) {
     #title-text{
-        font-size: 60px;
-        margin-top: 0px;
-        margin-bottom: 30px;
-        margin-top: 3px;
+        font-size: 50px;
     }
     .button{
-        height: 8%;
+        height: 12%;
+        margin-top: 3px;
         width: 65%;
         font-size: 150%;
     }
     .game-box-text{
+        font-size: 100%;
+        letter-spacing: 3px;
+    }
+    .game-answer-text{
+        font-size: 95%;
+        letter-spacing: 3px;
+    }
+    #game-box{
+        height: 80%;
+    }
+    .answer-image{
+        min-width: 200px;
+        max-width: 300px;
+        max-height: 300px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #title-text{
+        font-size: 70px;
+    }
+    .button{
+        height: 10%;
+        width: 65%;
         font-size: 150%;
+        margin-top: 3px;
+    }
+    .game-box-text{
+        font-size: 100%;
         letter-spacing: 3px;
     }
     .game-answer-text{
@@ -173,7 +165,47 @@ body{
         letter-spacing: 3px;
     }
     #game-box{
-        height: 60%;
+        height: 70%;
+    }
+    .answer-image{
+        min-width: 200px;
+        max-width: 300px;
+        max-height: 200px;
+    }
+    #title-text{
+        font-size: 45px;
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    #title-text{
+        font-size: 30px;
+        margin-top: 0px;
+        margin-bottom: 30px;
+        margin-top: 3px;
+    }
+    .button{
+        height: 8%;
+        margin-top: 10px;
+        width: 100%;
+        font-size: 150%;
+    }
+    .game-box-text{
+        font-size: 100%;
+        letter-spacing: 3px;
+    }
+    .game-answer-text{
+        font-size: 75%;
+        letter-spacing: 3px;
+    }
+    #main-box{
+        margin-top: -15px;
+    }
+    #game-box{
+        padding: 2px;
+        margin-top: 0;
+        height: 80%;
     }
     .answer-image{
         min-width: 200px;
